## Process this file with automake to produce Makefile.in

SUBDIRS = src pixmaps

builderdir = ${datadir}/glurp
builder_DATA = glurp.glade

desktopdir = $(datadir)/applications
desktop_DATA = glurp.desktop

icondir = $(datadir)/pixmaps
icon_DATA = glurp.png

EXTRA_DIST = ${builder_DATA} ${desktop_DATA} ${icon_DATA} glurp.nsi
