glurp_pixmapsdir = ${datadir}/glurp/pixmaps

glurp_pixmaps_DATA = \
	add.png \
	config.png \
	media-audiofile.png \
	player-prev.png \
	player-play.png \
	player-pause.png \
	player-stop.png \
	player-next.png \
	player-repeat.png \
	player-random.png \
	player-tabswitch.png \
	online.png offline.png \
	outputs.png \
	playlist.png playlists.png \
	remove.png \
	condense.png

EXTRA_DIST = $(glurp_pixmaps_DATA)
